tests/rosetta/out/Kotlin/15-puzzle-solver.kt
// Generated by Mochi compiler v0.10.28 on 2006-01-02T15:04:05Z
// Code generated from 15-puzzle-solver.mochi

object testpkg {
    fun Add(a: Int, b: Int): Int = a + b
    const val Pi: Double = 3.14
    var Answer: Int = 42
}

fun main() {
    println(testpkg.FifteenPuzzleExample())
}
